--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Create.cshtml
@@ -2,14 +2,15 @@
 @model EditCatalogEntryViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Edit '{0}'", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["New Custom Chat Instance"])</h1>
 </zone>
 
 <form method="post" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
+
     @await DisplayAsync(Model.Editor)
 
-    <button class="btn btn-primary" type="submit">@T["Save"]</button>
+    <button class="btn btn-primary" type="submit">@T["Create"]</button>
 
     <a class="btn btn-secondary cancel" role="button" asp-route-action="Index">@T["Cancel"]</a>
 </form>
