--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSession.CustomChatSession.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSession.CustomChatSession.Edit.cshtml
@@ -47,7 +47,7 @@
 <div class="container-fluid mb-3">
 
     <div class="text-bg-light rounded-5 border w-100">
-        <textarea class="form-control bg-transparent border-0 chat-user-prompt-input px-4" id="@userPromptHtmlId" data-session-id="@(Model.IsNew ? string.Empty : Model.Session.SessionId)" data-profile-id="@(Model.Session.ProfileId)" placeholder="@T["Message AI Chat"] ..." aria-label="@T["Message AI Chat"]" aria-describedby="@buttonHtmlId"></textarea>
+        <textarea class="form-control bg-transparent border-0 chat-user-prompt-input px-4" id="@userPromptHtmlId" data-session-id="@(Model.IsNew ? string.Empty : Model.Session.SessionId)" data-profile-id="@(Model.Session.ProfileId)" data-custom-chat-id="@(Model.Session.SessionId)" placeholder="@T["Message AI Chat"] ..." aria-label="@T["Message AI Chat"]" aria-describedby="@buttonHtmlId"></textarea>
         <div class="d-flex justify-content-between px-3 my-2">
             <div>
                 @if (promptGeneratedProfiles.Any())
