--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Create.cshtml
@@ -12,5 +12,6 @@
 
     <button class="btn btn-primary" type="submit">@T["Create"]</button>
 
-    <a class="btn btn-secondary cancel" role="button" asp-route-action="Index">@T["Cancel"]</a>
+    <a class="btn btn-secondary cancel" role="button" asp-controller="CustomChatSettings" asp-action="Index">@T["Cancel"]</a>
+
 </form>
