Save before driver changes

--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Index.cshtml
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 
 @model ListCatalogEntryViewModel<AIChatSession>
+@* // jack look here if we use a migration this model will have to change  *@
 
 <zone Name="Title"><h1>@RenderTitleSegments(T["Custom Chat Instances"])</h1></zone>
 
