--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Edit.cshtml
@@ -1,4 +1,5 @@
 @using CrestApps.OrchardCore.Core.Models
+
 @model EditCatalogEntryViewModel
 
 <zone Name="Title">
@@ -10,7 +11,7 @@
 
     @await DisplayAsync(Model.Editor)
 
-    <button class="btn btn-primary" type="submit">@T["Save"]</button>
+    @* <button class="btn btn-primary" type="submit">@T["Save"]</button> *@
 
     <a class="btn btn-secondary cancel" role="button" asp-controller="CustomChatSettings" asp-action="Index">@T["Cancel"]</a>
 
