--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionChat.cshtml
@@ -20,7 +20,7 @@
     var chatContainerHtmlId = $"{baseId}_ChatContainer";
 }
 
-<div class="p-3 overflow-y-auto h-100 rounded-2 border bg-theme" id="@chatContainerHtmlId">
+<div class="p-3 overflow-y-auto h-100 rounded-2 border bg-theme mb-3" id="@chatContainerHtmlId">
     <div class="list-group list-group-flush w-100">
         @if (Model.Interaction.Prompts.Count == 0)
         {
