--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteraction.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteraction.Edit.cshtml
@@ -7,7 +7,7 @@
             </div>
         }
 
-        <div class="d-flex flex-column h-100 flex-grow-1 ps-lg-3">
+        <div class="d-flex flex-column h-100 flex-grow-1 px-3">
             @if (Model.Header is not null)
             {
                 <div class="mb-3">
