--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionHeader.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionHeader.cshtml
@@ -1,9 +1,17 @@
 @using CrestApps.OrchardCore.AI.Core
 @using CrestApps.OrchardCore.AI.Chat.Interactions.ViewModels
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.Extensions.Options
+
 @inject IAuthorizationService AuthorizationService
+@inject IOptions<AIOptions> AIOptions
 
 @model ChatInteractionCapsuleViewModel
+
+@if (!AIOptions.Value.ProfileSources.TryGetValue(Model.Interaction.Source, out var source))
+{
+    return;
+}
 
 <div class="card text-bg-theme">
     <div class="card-body d-flex justify-content-between">
@@ -12,7 +20,7 @@
 
         <div>
             <a class="btn btn-secondary me-1" asp-action="Edit" asp-controller="Admin" asp-route-source="@Model.Interaction.Source" asp-area="@AIConstants.Feature.ChatInteractions">
-                <i class="fa-solid fa-plus"></i> @T["New Chat"]
+                <i class="fa-solid fa-plus"></i> @T["New Chat: '{0}'", source.DisplayName]
             </a>
 
             <a class="btn btn-primary" asp-action="Index" asp-controller="Admin" asp-area="@AIConstants.Feature.ChatInteractions">
