--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/Items/ChatInteraction.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/Items/ChatInteraction.Buttons.SummaryAdmin.cshtml
@@ -5,7 +5,7 @@
 
 @model ShapeViewModel<ChatInteraction>
 
-<a asp-action="Edit"
+<a asp-action="Chat"
    asp-route-source="@Model.Value.Source"
    asp-route-itemId="@Model.Value.ItemId"
    class="btn btn-primary btn-sm">@T["Chat"]</a>
