--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSettings/Index.cshtml
@@ -45,12 +45,12 @@
                 </div>
 
                 <div class="col-auto">
-                    <a asp-controller="CustomChatSettings"
+                    @* <a asp-controller="CustomChatSettings"
                        asp-action="Edit"
                        asp-route-contentItemId="@item.ContentItemId"
                        class="btn btn-outline-primary btn-sm">
                         @T["Edit"]
-                    </a>
+                    </a> *@
 
                     <form asp-controller="CustomChatSettings"
                           asp-action="Delete"
