--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSessionTools.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/CustomChatSessionTools.Edit.cshtml
@@ -152,7 +152,7 @@
             } catch (error) {
                 console.debug("[CustomChat][Upload] Upload error:", error);
             } finally {
-                this.value = badge;
+                this.value = "";
             }
         });
     })();
